--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Mukhiddin Sirjoddinov</h1>
-<h3>Student of the IUT </h3>
+<h2>Student of the IUT </h2>
 <p><b>Sophomore</b></p>
 <h3>List of courses</h3>
 <ul>
@@ -19,16 +19,16 @@
 </ul>
 <h3>Favorite movies</h3>
 <ol>
-	<li><a target="_blank" href="https://www.imdb.com/title/tt7682172/">Harry Potter</a></li>
+	<li><a target="_blank" href="https://www.imdb.com/list/ls003814436/">Harry Potter</a></li>
 	<li><a target="_blank" href="https://www.imdb.com/title/tt0411008/">Lost</a> </li>
-	<li><a target="_blank" href="https://www.imdb.com/title/tt7444776/">Home alone</a></li>
+	<li><a target="_blank" href="https://www.imdb.com/title/tt0099785/">Home alone</a></li>
 </ol>
 <img src="images/happy.jpg" alt="happy image" />
 <img src="images/sad.jpg" alt="sad image" />
 <h3>Fun fucts about neighbours</h3>
 <ul>
 	<li>Very smart and lucky</li>
-	<li>hard worker</li>
+	<li>Hard worker</li>
 </ul>
 
 
